refactored to a common assemblyinfo.cs file for attributes common to all libraries in the solution.

--- a/samples/Samples.Server/Samples.Server.csproj
+++ b/samples/Samples.Server/Samples.Server.csproj
@@ -111,6 +111,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ClientCertificateAuthentication\ClientCertificateAuthenticationExtensions.cs" />
     <Compile Include="ClientCertificateAuthentication\ClientCertificateAuthenticationHandler.cs" />
     <Compile Include="ClientCertificateAuthentication\ClientCertificateAuthenticationMiddleware.cs" />
