--- a/source/Drey.Server.Core/Drey.Server.Core.csproj
+++ b/source/Drey.Server.Core/Drey.Server.Core.csproj
@@ -48,6 +48,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="EventBus.cs" />
     <Compile Include="Exceptions\RuntimeHasNotConnectedException.cs" />
