--- a/samples/Samples.ThirdPartyIntegrations/Samples.ThirdPartyIntegrations.csproj
+++ b/samples/Samples.ThirdPartyIntegrations/Samples.ThirdPartyIntegrations.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="IToImplement.cs" />
     <Compile Include="Nut.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
