--- a/source/Drey.DomainModel/Drey.DomainModel.csproj
+++ b/source/Drey.DomainModel/Drey.DomainModel.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Empty.cs" />
     <Compile Include="EnvironmentInfo.cs" />
     <Compile Include="FileDownloadOptions.cs" />
