--- a/source/Drey.Owin/Drey.Owin.csproj
+++ b/source/Drey.Owin/Drey.Owin.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="BufferContentIntoAMemoryStreamMiddleware.cs" />
     <Compile Include="GlobalExceptionMiddleware.cs" />
