--- a/source/Drey.Server.Hubs/Drey.Server.Hubs.csproj
+++ b/source/Drey.Server.Hubs/Drey.Server.Hubs.csproj
@@ -59,6 +59,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Directors\Director.cs" />
     <Compile Include="Directors\IListLogsDirector.cs" />
     <Compile Include="Directors\IOpenLogFileDirector.cs" />
