--- a/source/Drey.Server.NancyFx/Drey.Server.NancyFx.csproj
+++ b/source/Drey.Server.NancyFx/Drey.Server.NancyFx.csproj
@@ -60,6 +60,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Modules\LogsModules.cs" />
     <Compile Include="Modules\NugetUploadModule.cs" />
     <Compile Include="Modules\RecycleClientModule.cs" />
