--- a/source/Drey/packages.config
+++ b/source/Drey/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LibLog" version="4.2.3" targetFramework="net451" developmentDependency="true" />
+  <package id="psake" version="4.5.0" targetFramework="net452" />
+  <package id="psake-contrib" version="1.1.0" targetFramework="net452" />
   <package id="Topshelf" version="3.3.1" targetFramework="net452" />
 </packages>
